--- a/product/index.html
+++ b/product/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href='./style/style.css'>
     <title>Products</title>
 </head>
 <body>
@@ -28,7 +28,6 @@
     </div>
     
 </body>
-<script src="https://www.w3schools.com/lib/w3.js"></script>
-<script type="application/javascript" src="data.js"></script>
-<script type="application/javascript" src="app.js"></script>
+<script type="application/javascript" src='./JS/data.json'></script>
+<script type="application/javascript" src='./JS/app.js'></script>
 </html>
