--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
     <script>
       showDivs(0);  // To load the first image on page load.
+      timer = setInterval(function(){plusDivs(1)}, 10000);
     </script>
   </body>
 </html>
