--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
     <div class="topnav">
           <div>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <a href="#">
                 <img src="static/assets/logo.png" alt="Frescamer" style="height:40px; margin-left: 15px; margin-top: 5px;">
             </a>
           <button class="openbtn" onclick="openNav()">☰</button>
@@ -52,12 +52,12 @@
     <div id="mySidepanel" class="sidepanel">
               <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
               <a href="#">Home</a>
-              <a href="#">Products</a>
+              <a href="product/index.html">Products</a>
               <a href="#">Recipes</a>
               <a href="#">Contact Us</a>
               <a href="#">Services</a>
               <a href="#">Store Finder</a>
-              <a href="#">Gallery</a>
+              <a href="template/gal.html">Gallery</a>
 
     </div>
 
