--- a/product/index.html
+++ b/product/index.html
@@ -10,23 +10,24 @@
     <title>Products</title>
 </head>
 <body>
-    
+
     <div class="topnav">
         <div href="#">
-            <img src="./images/logo.png" alt=" " style="height:40px; margin: 4px; margin-top: 2px;" >
-            <span>Frescamer</span>
+          <a href="../index.html">
+              <img src="../static/assets/logo.png" alt="Frescamer" style="height:40px; margin-left: 15px; margin-top: 3px;">
+          </a>
             <button class="openbtn" onclick="openNav()">☰</button>
         </div>
     </div>
     <div id="mySidepanel" class="sidepanel">
-              <button href="javascript:void(0)" class="closebtn" onclick="closeNav()" style="font-size:42px; width: auto; text-align: center; background-color: red; border: 0px;">×</button>
-              <a href="#">Home</a>
+              <button href="javascript:void(0)" class="closebtn" onclick="closeNav()" style="font-size:42px; width: auto; text-align: center; border: 0px;">×</button>
+              <a href="../index.html">Home</a>
               <a href="#">Products</a>
               <a href="#">Recipes</a>
               <a href="#">Contact Us</a>
               <a href="#">Services</a>
               <a href="#">Store Finder</a>
-              <a href="#">Gallery</a>
+              <a href="../template/gal.html">Gallery</a>
     </div>
     <div id="card-main" >
         <div id="prodImg-main" >
@@ -44,7 +45,7 @@
     <div id="box">
         <h1 id="pro">PRODUCTS</h1>
     </div>
-    
+
 </body>
 <script type="application/javascript" src='./JS/data.json'></script>
 <script type="application/javascript" src='./JS/app.js'></script>
