--- a/order.html
+++ b/order.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>frescammer</title>
-  <link rel="stylesheet" type="text/css" href="../static/css/order.css">
+  <link rel="stylesheet" type="text/css" href="static/css/order.css">
 </head>
 
 <body>
