--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="topnav">
           <div>
             <a href="#">
-                <img src="static/assets/logo.png" alt="Frescamer" style="height:40px; margin-left: 15px; margin-top: 5px;">
+                <img src="static/assets/logo.png" alt="Frescamer" class="logo">
             </a>
           <button class="openbtn" onclick="openNav()">☰</button>
 
@@ -45,9 +45,6 @@
     <button class="scroll_btn display-right" onclick="plusDivs(1)">&#10095;</button>
 
 
-    <div class="botpanel">
-              About US<br> We make food <br> and juice<br> ALl rights Reserved <br> 2019
-    </div>
 
     <div id="mySidepanel" class="sidepanel">
               <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
@@ -61,6 +58,9 @@
 
     </div>
 
+    <div class="botpanel">
+              About US<br> We make food <br> and juice<br> ALl rights Reserved <br> 2019
+    </div>
 
     <script>
       showDivs(0);  // To load the first image on page load. :)
