--- a/product/index.html
+++ b/product/index.html
@@ -14,7 +14,7 @@
     <div class="topnav">
         <div href="#">
           <a href="../index.html">
-              <img src="../static/assets/logo.png" alt="Frescamer" style="height:40px; margin-left: 15px; margin-top: 3px;">
+              <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
           </a>
             <button class="openbtn" onclick="openNav()">☰</button>
         </div>
