--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <a href="contact/contact.html">Contact Us</a>
     <a href="#">Services</a>
     <a href="#">Store Finder</a>
-    <a href="template/gal.html">Gallery</a>
+    <a href="gallery/">Gallery</a>
 
   </div>
 
