--- a/recipe/index.html
+++ b/recipe/index.html
@@ -33,7 +33,7 @@
         <a href="../contact/contact.html">Contact Us</a>
         <a href="#">Services</a>
         <a href="#">Store Finder</a>
-        <a href="../template/gal.html">Gallery</a>
+        <a href="../gallery/gal.html">Gallery</a>
 
     </div>
     <div id="card-main" >
