--- a/contact/contact.html
+++ b/contact/contact.html
@@ -25,7 +25,7 @@
     <a href="../contact/contact.html">Contact Us</a>
     <a href="#">Services</a>
     <a href="#">Store Finder</a>
-    <a href="../template/gal.html">Gallery</a>
+    <a href="../gallery/">Gallery</a>
 
   </div>
   <div class="container">
