--- a/gallery/gal.html
+++ b/gallery/gal.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Gallery</title>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Gallery</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
-  <!-- css -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 
 
-  <!-- google font -->
-  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Kreon:300,400,700'>
+    <!-- google font -->
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Kreon:300,400,700'>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script type="text/javascript" src="nav.js"></script>
-  </head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../static/assets/global.css">
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script type="application/javascript" src='../static/js/nav.js'></script>
+</head>
+
 <body>
     <div class="topnav">
         <div>
@@ -26,56 +33,42 @@
                 <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
             </a>
         </div>
-            <button class="openbtn" onclick="openNav()">☰</button>
+        <button class="openbtn" onclick="openNav()">☰</button>
 
-        
+
 
     </div>
 
-<div id="mySidepanel" class="sidepanel">
-    <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-    <a href="../index.html">Home</a>
-    <a href="../product/index.html">Products</a>
-    <a href="../recipe/index.html">Recipes</a>
-    <a href="../contact/contact.html">Contact Us</a>
-    <a href="#">Services</a>
-    <a href="#">Store Finder</a>
-    <a href="../template/gal.html">Gallery</a>
+    <div id="mySidepanel" class="sidepanel">
+        <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
+        <a href="../index.html">Home</a>
+        <a href="../product/index.html">Products</a>
+        <a href="../recipe/index.html">Recipes</a>
+        <a href="../contact/contact.html">Contact Us</a>
+        <a href="#">Services</a>
+        <a href="#">Store Finder</a>
+        <a href="../gallery/gal.html">Gallery</a>
 
-</div>
+    </div>
     <div id="food-menu" class="light-wrapper">
         <section class="ss-style-top"></section>
         <div class="container inner">
             <h2 class="section-title text-center">gallery</h2>
 
-                        <div class="row">
+            <div class="row">
                 <div class="col-sm-3 col-md-3">
                     <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                  <!--  <div class="menu-titles"><h1 class="">Hot drinks</h1></div> -->
-
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                  <!--  <div class="menu-titles"><h1 class="">Ice drinks</h1></div>-->
+                    <!--  <div class="menu-titles"><h1 class="">Hot drinks</h1></div> -->
 
                 </div>
                 <div class="col-sm-3 col-md-3">
                     <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                <!--    <div class="menu-titles"><h1 class="">Smoothies</h1></div>-->
+                    <!--  <div class="menu-titles"><h1 class="">Ice drinks</h1></div>-->
 
                 </div>
-
-
-
-              <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                </div>
-
-                </div>
-                <div class="row">
                 <div class="col-sm-3 col-md-3">
                     <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                <!--    <div class="menu-titles"><h1 class="">Cocktails</h1></div>-->
+                    <!--    <div class="menu-titles"><h1 class="">Smoothies</h1></div>-->
 
                 </div>
 
@@ -83,26 +76,41 @@
 
                 <div class="col-sm-3 col-md-3">
                     <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                <!--    <div class="menu-titles"><h1 class="">Beer</h1></div>-->
+                </div>
 
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
+                    <!--    <div class="menu-titles"><h1 class="">Cocktails</h1></div>-->
+
+                </div>
+
 
 
                 <div class="col-sm-3 col-md-3">
                     <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                <!--    <div class="menu-titles"><h1 class="">Wine</h1></div>-->
-                  </div>
+                    <!--    <div class="menu-titles"><h1 class="">Beer</h1></div>-->
+
+                </div>
 
 
                 <div class="col-sm-3 col-md-3">
                     <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                  <!--  <div class="menu-titles"><h1 class="">Sprites</h1></div>-->
+                    <!--    <div class="menu-titles"><h1 class="">Wine</h1></div>-->
+                </div>
+
+
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
+                    <!--  <div class="menu-titles"><h1 class="">Sprites</h1></div>-->
 
                 </div>
             </div>
         </div>
-        </div>
+    </div>
 
     <!--</div>-->
 </body>
+
 </html>
