--- a/product/index.html
+++ b/product/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href='./style/style.css'>
+    <link rel="stylesheet" href='../static/assets/global.css'>
     <title>Products</title>
 </head>
 
@@ -60,5 +61,6 @@
 </body>
 <script type="application/javascript" src='./JS/data.json'></script>
 <script type="application/javascript" src='./JS/app.js'></script>
+<script type="application/javascript" src='../static/js/nav.js'></script>
 
 </html>
