--- a/contact/contact.html
+++ b/contact/contact.html
@@ -5,7 +5,13 @@
 <head>
   <meta charset="utf-8">
   <title>frescammer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./style/order.css">
+  <link rel="stylesheet" type="text/css" href="../static/assets/global.css">
+  <script type="application/javascript" src='../static/js/nav.js'></script>
+
+  
+
 </head>
 
 <body>
@@ -25,7 +31,7 @@
     <a href="../contact/contact.html">Contact Us</a>
     <a href="#">Services</a>
     <a href="#">Store Finder</a>
-    <a href="../gallery/">Gallery</a>
+    <a href="../gallery/gal.html">Gallery</a>
 
   </div>
   <div class="container">
@@ -59,36 +65,6 @@
     </div>
   </div>
 
-  <script>
-    function openNav() {
-      document.getElementById("mySidepanel").style.width = "420px";
-    }
-
-    function closeNav() {
-      document.getElementById("mySidepanel").style.width = "0";
-    }
-    var slideIndex = 1; // Initially set the index to 1
-    showDivs(slideIndex);
-
-    function plusDivs(n) {
-      showDivs(slideIndex += n);
-    }
-
-    function showDivs(n) {
-      var i;
-      var x = document.getElementsByClassName("slides"); // Put all slideshow elements inside same class name "slides".
-      if (n > x.length) {
-        slideIndex = 1
-      }
-      if (n < 1) {
-        slideIndex = x.length
-      }
-      for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none";
-      }
-      x[slideIndex - 1].style.display = "block";
-    }
-  </script>
 </body>
 
 </html>
