--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 <head>
   <meta charset="utf-8">
   <title>frescammer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="static/css/index.css">
+  <link rel="stylesheet" type="text/css" href="static/assets/global.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script type="text/javascript" src="static/js/slide.json"></script>
   <script type="text/javascript" src="static/js/index.js"></script>
+  <script type="text/javascript" src="./static/js/nav.js"></script>
 
 </head>
 
