--- a/recipe/index.html
+++ b/recipe/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href='./style/style.css'>
+    <link rel="stylesheet" href='../static/assets/global.css'>
+
     <title>Recipes</title>
 </head>
 <body>
@@ -56,4 +58,5 @@
 </body>
 <script type="application/javascript" src='./JS/data.json'></script>
 <script type="application/javascript" src='./JS/app.js'></script>
+<script type="application/javascript" src='../static/js/nav.js'></script>
 </html>
