--- a/contact/contact.html
+++ b/contact/contact.html
@@ -3,67 +3,58 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <title>frescammer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./style/order.css">
-  <link rel="stylesheet" type="text/css" href="../static/assets/global.css">
-  <script type="application/javascript" src='../static/js/nav.js'></script>
+    <meta charset="utf-8">
+    <title>frescammer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style/contact.css">
+    <link rel="stylesheet" type="text/css" href="../static/assets/global.css">
+    <script type="application/javascript" src='../static/js/nav.js'></script>
+    <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
 
-  
+
 
 </head>
 
 <body>
-  <div class="topnav">
-    <div href="#">
-      <a href="../index.html">
-        <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
-      </a>
-      <button class="openbtn" onclick="openNav()">☰</button>
+    <div class="topnav">
+        <div href="#">
+            <a href="../index.html">
+                <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
+            </a>
+            <button class="openbtn" onclick="openNav()">☰</button>
+        </div>
     </div>
-  </div>
-  <div id="mySidepanel" class="sidepanel">
-    <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-    <a href="../index.html">Home</a>
-    <a href="../product/index.html">Products</a>
-    <a href="../recipe/index.html">Recipes</a>
-    <a href="../contact/contact.html">Contact Us</a>
-    <a href="#">Services</a>
-    <a href="#">Store Finder</a>
-    <a href="../gallery/gal.html">Gallery</a>
+    <div id="mySidepanel" class="sidepanel">
+        <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
+        <a href="../index.html">Home</a>
+        <a href="../product/index.html">Products</a>
+        <a href="../recipe/index.html">Recipes</a>
+        <a href="../contact/contact.html">Contact Us</a>
+        <a href="#">Services</a>
+        <a href="#">Store Finder</a>
+        <a href="../gallery/gal.html">Gallery</a>
 
-  </div>
-  <div class="container">
-    <div class="row ">
-      <div class="col-lg-5" style="height:900px">
-
-        <div class="contact_us">
-          <h1 style=" text-shadow: 2px 2px 6px #a5d8ff; font-size: 40px"><br> Contact info</h1>
-          <b>Phone</b> : +91 924354645 <br> <b>Email</b> : abc@gmail.com <br><br> <b>Address</b> : <br> Fxvxc 23 <br>
-          dsdsds gdd <br> fdfdfd
-        </div>
-
-        <br>
-
-        <div class=" row "><iframe
-            src="https://docs.google.com/forms/d/e/1FAIpQLScQoJ025q-nqt6njV1a0aGk5NaXzwADcP9xrBbGQ5uPG0cCRQ/viewform?embedded=true"
-            width=100% height="650px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-
-        </div>
-
-      </div><br>
-      <div class="col-lg-6">
-        <div class="row">
-          <br>
-          <iframe class="order"
-            src="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?embedded=true"
-            width=100% height="1496" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-        </div>
-
-      </div>
     </div>
-  </div>
+    <div class="container">
+        <div class="row ">
+            <div class="col">
+
+                <div class="contact_info">
+                    <h1>Contact info</h1>
+                    <b>Phone</b> : +91 924354645 <br> <b>Email</b> : abc@gmail.com <br> <b>Address</b> : <br> Fxvxc 23 <br> dsdsds gdd <br> fdfdfd
+                </div>
+
+                <div class=" feedback">
+                    <iframe class="feedbackFrom" src="https://docs.google.com/forms/d/e/1FAIpQLScQoJ025q-nqt6njV1a0aGk5NaXzwADcP9xrBbGQ5uPG0cCRQ/viewform?embedded=true" width=100% height="650px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                </div>
+
+            </div>
+
+            <div class=" order">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?embedded=false" width=100% height="1496" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            </div>
+        </div>
+    </div>
 
 </body>
 
