--- a/product/index.html
+++ b/product/index.html
@@ -61,6 +61,7 @@
         <p id="ppro">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
     </div>
+    <div class=footer>Frescamer | Powered by Excel 2019</div>
 
 </body>
 <script type="application/javascript" src='./JS/data.json'></script>
