--- a/gallery/gal.html
+++ b/gallery/gal.html
@@ -5,8 +5,7 @@
     <title>Gallery</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
     <!-- css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -108,7 +107,9 @@
 
                 </div>
             </div>
+
         </div>
+        <div class=footer>Frescamer | Powered by Excel 2019</div>
     </div>
 
     <!--</div>-->
