--- a/gallery/gal.html
+++ b/gallery/gal.html
@@ -2,117 +2,51 @@
 <html>
 
 <head>
-    <title>Gallery</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-
-    <!-- css -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-
-
-    <!-- google font -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Kreon:300,400,700'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="../static/assets/global.css">
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <script type="application/javascript" src='../static/js/nav.js'></script>
+    <link rel="stylesheet" href='./style/style.css'>
+    <link rel="stylesheet" href='../static/assets/global.css'>
+    <title>Gallery</title>
 </head>
 
 <body>
-    <div class="topnav">
-        <div>
-            <a href="#">
-                <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
-            </a>
+
+    <div class="container">
+        <div class="topnav">
+            <div>
+                <a href="#">
+                    <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
+                </a>
+                <button class="openbtn" onclick="openNav()">☰</button>
+
+            </div>
+
         </div>
-        <button class="openbtn" onclick="openNav()">☰</button>
-
-
-
     </div>
-
     <div id="mySidepanel" class="sidepanel">
         <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
         <a href="../index.html">Home</a>
         <a href="../product/index.html">Products</a>
-        <a href="../recipe/index.html">Recipes</a>
+        <a href="../recipe/index.html">
+            <p>Recipes</p>
+        </a>
         <a href="../contact/contact.html">Contact Us</a>
         <a href="#">Services</a>
         <a href="#">Store Finder</a>
         <a href="../gallery/gal.html">Gallery</a>
 
     </div>
-    <div id="food-menu" class="light-wrapper">
-        <section class="ss-style-top"></section>
-        <div class="container inner">
-            <h2 class="section-title text-center">gallery</h2>
-
-            <div class="row">
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                    <!--  <div class="menu-titles"><h1 class="">Hot drinks</h1></div> -->
-
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                    <!--  <div class="menu-titles"><h1 class="">Ice drinks</h1></div>-->
-
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                    <!--    <div class="menu-titles"><h1 class="">Smoothies</h1></div>-->
-
-                </div>
-
-
-
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                    <!--    <div class="menu-titles"><h1 class="">Cocktails</h1></div>-->
-
-                </div>
-
-
-
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                    <!--    <div class="menu-titles"><h1 class="">Beer</h1></div>-->
-
-                </div>
-
-
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                    <!--    <div class="menu-titles"><h1 class="">Wine</h1></div>-->
-                </div>
-
-
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="image/pis.jpg" alt="image not found"></div>
-                    <!--  <div class="menu-titles"><h1 class="">Sprites</h1></div>-->
-
-                </div>
-            </div>
-
-        </div>
-        <div class=footer>Frescamer | Powered by Excel 2019</div>
+    <div id="box">
+        <h1 id="pro">GALLERY</h1>
     </div>
+    <div class=footer>Frescamer | Powered by Excel 2019</div>
 
-    <!--</div>-->
 </body>
+<script type="application/javascript" src='./JS/data.json'></script>
+<script type="application/javascript" src='./JS/app.js'></script>
+<script type="application/javascript" src='../static/js/nav.js'></script>
 
 </html>
