--- a/contact/contact.html
+++ b/contact/contact.html
@@ -54,7 +54,26 @@
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?embedded=false" width=100% height="1496" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div>
         </div>
-        <div class=footer>Frescamer | Powered by Excel 2019</div>
+        <div class=footer>
+            <div class="pair">
+                <div class="footerLinks">
+                    <h3>LINKS</h3><br>
+                    <a href="#">Home</a><br>
+                    <a href="product/index.html">Products</a><br>
+                    <a href="recipe/index.html">Recipes</a><br>
+                    <a href="contact/contact.html">Contact Us</a><br>
+                    <a href="#">Services</a><br>
+                    <a href="#">Store Finder</a><br>
+                    <a href="gallery/gal.html">Gallery</a><br><br>
+                </div>
+                <div class="footerDetails">
+                    <h3>ADDRESS</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
+                    <h3>CONTACT US</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
+                </div>
+            </div>
+            Frescamer | Powered by Excel 2019</div>
     </div>
 
 </body>
