--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 
     <div class="container">
+        <div class="fab">Contact Us</div>
         <div class="topnav">
             <div>
                 <a href="#">
@@ -72,11 +73,39 @@
             }, 10000);
         </script>
         <div class="botpanel">
-            <h1>About Us</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum
-                dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor
-                sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class=footer>Frescamer | Powered by Excel 2019</div>
+            <div class="tbox">
+                <h1>About Us</h1>
+                <div class="pair">
+                    <img src="./static/images/1.jpg" class="img1">
+                    <p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                        et dolore magna aliqua.</p>
+
+                </div>
+            </div>
+            <div class=footer>
+                <div class="pair">
+                    <div class="footerLinks">
+                        <h3>LINKS</h3><br>
+                        <a href="#">Home</a><br>
+                        <a href="product/index.html">Products</a><br>
+                        <a href="recipe/index.html">Recipes</a><br>
+                        <a href="contact/contact.html">Contact Us</a><br>
+                        <a href="#">Services</a><br>
+                        <a href="#">Store Finder</a><br>
+                        <a href="gallery/gal.html">Gallery</a><br><br>
+                    </div>
+                    <div class="footerDetails">
+                        <h3>ADDRESS</h3><br>
+                        <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
+                        <h3>CONTACT US</h3><br>
+                        <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
+                    </div>
+                </div>
+                Frescamer | Powered by Excel 2019</div>
         </div>
 
 
