--- a/gallery/gal.html
+++ b/gallery/gal.html
@@ -15,7 +15,9 @@
 <body>
 
     <div class="container">
-        <div class="fab">Contact Us</div>
+        <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
+            <p> Contact Us</p>
+        </div>
         <div class="topnav">
             <div>
                 <a href="#">
@@ -47,13 +49,13 @@
         <div class="pair">
             <div class="footerLinks">
                 <h3>LINKS</h3><br>
-                <a href="#">Home</a><br>
-                <a href="product/index.html">Products</a><br>
-                <a href="recipe/index.html">Recipes</a><br>
-                <a href="contact/contact.html">Contact Us</a><br>
+                <a href="../index.html">Home</a><br>
+                <a href="../product/index.html">Products</a><br>
+                <a href="../recipe/index.html">Recipes</a><br>
+                <a href="../contact/contact.html">Contact Us</a><br>
                 <a href="#">Services</a><br>
                 <a href="#">Store Finder</a><br>
-                <a href="gallery/gal.html">Gallery</a><br><br>
+                <a href="../gallery/gal.html">Gallery</a><br><br>
             </div>
             <div class="footerDetails">
                 <h3>ADDRESS</h3><br>
