--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" type="text/css" href="static/css/index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script type="text/javascript" src="static/js/slide.json"></script>
     <script type="text/javascript" src="static/js/index.js"></script>
     <script type="text/javascript" src="./static/js/nav.js"></script>
@@ -30,7 +32,9 @@
 
 
     <div class="container">
-        <div class="fab">Contact Us</div>
+        <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
+            <p> Contact Us</p>
+        </div>
         <div class="topnav">
             <div>
                 <a href="#">
@@ -72,41 +76,39 @@
                 plusDivs(1)
             }, 10000);
         </script>
-        <div class="botpanel">
-            <div class="tbox">
-                <h1>About Us</h1>
-                <div class="pair">
-                    <img src="./static/images/1.jpg" class="img1">
-                    <p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem
-                        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem
-                        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua.</p>
+        <div class="tbox">
+            <h1>About Us</h1>
+            <div class="pair">
+                <img src="./static/images/1.jpg" class="img1">
+                <p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua.</p>
 
+            </div>
+        </div>
+        <div class=footer>
+            <div class="pair">
+                <div class="footerLinks">
+                    <h3>LINKS</h3><br>
+                    <a href="#">Home</a><br>
+                    <a href="product/index.html">Products</a><br>
+                    <a href="recipe/index.html">Recipes</a><br>
+                    <a href="contact/contact.html">Contact Us</a><br>
+                    <a href="#">Services</a><br>
+                    <a href="#">Store Finder</a><br>
+                    <a href="gallery/gal.html">Gallery</a><br><br>
+                </div>
+                <div class="footerDetails">
+                    <h3>ADDRESS</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
+                    <h3>CONTACT US</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
                 </div>
             </div>
-            <div class=footer>
-                <div class="pair">
-                    <div class="footerLinks">
-                        <h3>LINKS</h3><br>
-                        <a href="#">Home</a><br>
-                        <a href="product/index.html">Products</a><br>
-                        <a href="recipe/index.html">Recipes</a><br>
-                        <a href="contact/contact.html">Contact Us</a><br>
-                        <a href="#">Services</a><br>
-                        <a href="#">Store Finder</a><br>
-                        <a href="gallery/gal.html">Gallery</a><br><br>
-                    </div>
-                    <div class="footerDetails">
-                        <h3>ADDRESS</h3><br>
-                        <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
-                        <h3>CONTACT US</h3><br>
-                        <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
-                    </div>
-                </div>
-                Frescamer | Powered by Excel 2019</div>
-        </div>
+            Frescamer | Powered by Excel 2019</div>
 
 
     </div>
