--- a/recipe/index.html
+++ b/recipe/index.html
@@ -9,13 +9,15 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href='./style/style.css'>
     <link rel="stylesheet" href='../static/assets/global.css'>
-    <title>Products</title>
+    <title>Recipes</title>
 </head>
 
 <body>
 
     <div class="container">
-        <div class="fab">Contact Us</div>
+        <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
+            <p> Contact Us</p>
+        </div>
         <div class="topnav">
             <div>
                 <a href="#">
@@ -58,21 +60,24 @@
         </div>
     </div>
     <div id="box">
-        <h1 id="pro">Recipes</h1>
-        <p id="ppro">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
+        <div class='bannerImage'><img src='../static/images/1.jpg'></div>
+        <div class="tbox">
+            <h1>RECIPES</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </div>
     </div>
     <div class=footer>
         <div class="pair">
             <div class="footerLinks">
                 <h3>LINKS</h3><br>
-                <a href="#">Home</a><br>
-                <a href="product/index.html">Products</a><br>
-                <a href="recipe/index.html">Recipes</a><br>
-                <a href="contact/contact.html">Contact Us</a><br>
+                <a href="../index.html">Home</a><br>
+                <a href="../product/index.html">Products</a><br>
+                <a href="../recipe/index.html">Recipes</a><br>
+                <a href="../contact/contact.html">Contact Us</a><br>
                 <a href="#">Services</a><br>
                 <a href="#">Store Finder</a><br>
-                <a href="gallery/gal.html">Gallery</a><br><br>
+                <a href="../gallery/gal.html">Gallery</a><br><br>
             </div>
             <div class="footerDetails">
                 <h3>ADDRESS</h3><br>
