--- a/gallery/gal.html
+++ b/gallery/gal.html
@@ -44,6 +44,58 @@
     </div>
     <div id="box">
         <h1 id="pro">GALLERY</h1>
+
+
+        <div class="cardRow">
+            <div class="card">
+                <div class="prodImg" style="background-image: url('./images/download_1.jpg')">
+                </div>
+                <div class="prodEtail">
+                    <p class="proName">products name</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="prodImg" style="background-image: url('./images/download_2.jpg')">
+                </div>
+                <div class="prodEtail">
+                    <p class="proName">products name</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="prodImg" style="background-image: url('./images/download_3.jpg')">
+                </div>
+                <div class="prodEtail">
+                    <p class="proName">products name</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="cardRow">
+            <div class="card">
+                <div class="prodImg" style="background-image: url('./images/download_4.jpg')">
+                </div>
+                <div class="prodEtail">
+                    <p class="proName">products name</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="prodImg" style="background-image: url('./images/download_5.jpg')">
+                </div>
+                <div class="prodEtail">
+                    <p class="proName">products name</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="prodImg" style="background-image: url('./images/download_1.jpg')">
+                </div>
+                <div class="prodEtail">
+                    <p class="proName">products name</p>
+                </div>
+            </div>
+        </div>
+
+
     </div>
     <div class=footer>
         <div class="pair">
@@ -67,8 +119,7 @@
         Frescamer | Powered by Excel 2019</div>
 
 </body>
-<script type="application/javascript" src='./JS/data.json'></script>
-<script type="application/javascript" src='./JS/app.js'></script>
+
 <script type="application/javascript" src='../static/js/nav.js'></script>
 
 </html>
