contact page styling

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../static/assets/global.css">
     <script type="application/javascript" src='../static/js/nav.js'></script>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 
@@ -36,23 +37,26 @@
 
     </div>
     <div class="container">
-        <div class="row ">
-            <div class="col">
 
-                <div class="contact_info">
-                    <h1>Contact info</h1>
-                    <b>Phone</b> : +91 924354645 <br> <b>Email</b> : abc@gmail.com <br> <b>Address</b> : <br> Fxvxc 23 <br> dsdsds gdd <br> fdfdfd
-                </div>
-
-                <div class=" feedback">
-                    <iframe class="feedbackFrom" src="https://docs.google.com/forms/d/e/1FAIpQLScQoJ025q-nqt6njV1a0aGk5NaXzwADcP9xrBbGQ5uPG0cCRQ/viewform?embedded=true" width=100% height="650px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <div class="pair">
+            <div class="contact_info">
+                <h1>Contact info</h1><a href=""><i class="fa fa-phone" aria-hidden="true"></i> 9865327410</a><br><br>
+                <a href=""><i class="fa fa-envelope" aria-hidden="true"></i>abc@frescamer.com</a><br><br>
+                <a href=""><i class="fa fa-map-marker" aria-hidden="true"></i><p>Lorem ipsum dolor;<br>sit amet,<br> consectetur adipiscing</p></a><br><br>
+                <div class="order">
+                    <p>Order Now</p>
                 </div>
 
             </div>
+            <div class=" feedback">
+                <iframe class="feedbackFrom" src="https://docs.google.com/forms/d/e/1FAIpQLScQoJ025q-nqt6njV1a0aGk5NaXzwADcP9xrBbGQ5uPG0cCRQ/viewform?embedded=true" width=100% height="600px" overflow="none" frameborder="0">Loading...</iframe>
 
-            <div class=" order">
+
+            </div>
+
+            <!-- <div class=" order">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeNGTP-bFjNvQOtyKkEkmGJMwsUVYH1IrROEZyC0hu6ypxwrQ/viewform?embedded=false" width=100% height="1496" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-            </div>
+            </div> -->
         </div>
         <div class=footer>
             <div class="pair">
