--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <div id="mySidepanel" class="sidepanel">
             <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
             <a href="#">Home</a>
-            <a href="product/index.html">Products</a>
-            <a href="recipe/index.html">Recipes</a>
-            <a href="contact/contact.html">Contact Us</a>
-            <a href="#">Services</a>
+            <a href="product/">Products</a>
+            <a href="recipe/">Recipes</a>
+            <a href="contact/">Contact Us</a>
+            <a href="services/>Services</a>
             <a href="#">Store Finder</a>
-            <a href="gallery/gal.html">Gallery</a>
+            <a href="gallery/">Gallery</a>
 
         </div>
 
