--- a/recipe/index.html
+++ b/recipe/index.html
@@ -32,15 +32,15 @@
 
     <div id="mySidepanel" class="sidepanel">
         <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-        <a href="../index.html">Home</a>
-        <a href="../product/index.html">Products</a>
-        <a href="../recipe/index.html">
+        <a href="../">Home</a>
+        <a href="../product/">Products</a>
+        <a href="../recipe/">
             <p>Recipes</p>
         </a>
-        <a href="../contact/contact.html">Contact Us</a>
+        <a href="../contact/">Contact Us</a>
         <a href="#">Services</a>
         <a href="#">Store Finder</a>
-        <a href="../gallery/gal.html">Gallery</a>
+        <a href="../gallery/">Gallery</a>
 
     </div>
 
@@ -71,13 +71,13 @@
         <div class="pair">
             <div class="footerLinks">
                 <h3>LINKS</h3><br>
-                <a href="../index.html">Home</a><br>
-                <a href="../product/index.html">Products</a><br>
-                <a href="../recipe/index.html">Recipes</a><br>
-                <a href="../contact/contact.html">Contact Us</a><br>
+                <a href="../">Home</a><br>
+                <a href="../product/">Products</a><br>
+                <a href="../recipe/">Recipes</a><br>
+                <a href="../contact/">Contact Us</a><br>
                 <a href="#">Services</a><br>
                 <a href="#">Store Finder</a><br>
-                <a href="../gallery/gal.html">Gallery</a><br><br>
+                <a href="../gallery/">Gallery</a><br><br>
             </div>
             <div class="footerDetails">
                 <h3>ADDRESS</h3><br>
