--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="topnav">
         <div href="#">
-            <a href="../index.html">
+            <a href="../">
                 <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
             </a>
             <button class="openbtn" onclick="openNav()">☰</button>
@@ -27,13 +27,13 @@
     </div>
     <div id="mySidepanel" class="sidepanel">
         <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-        <a href="../index.html">Home</a>
-        <a href="../product/index.html">Products</a>
-        <a href="../recipe/index.html">Recipes</a>
-        <a href="../contact/contact.html">Contact Us</a>
+        <a href="../">Home</a>
+        <a href="../product/">Products</a>
+        <a href="../recipe/">Recipes</a>
+        <a href="../contact/">Contact Us</a>
         <a href="#">Services</a>
         <a href="#">Store Finder</a>
-        <a href="../gallery/gal.html">Gallery</a>
+        <a href="../gallery/">Gallery</a>
 
     </div>
     <div class="container">
@@ -62,13 +62,13 @@
             <div class="pair">
                 <div class="footerLinks">
                     <h3>LINKS</h3><br>
-                    <a href="../index.html">Home</a><br>
-                    <a href="../product/index.html">Products</a><br>
-                    <a href="../recipe/index.html">Recipes</a><br>
-                    <a href="../contact/contact.html">Contact Us</a><br>
+                    <a href="../">Home</a><br>
+                    <a href="../product/">Products</a><br>
+                    <a href="../recipe/">Recipes</a><br>
+                    <a href="../contact/">Contact Us</a><br>
                     <a href="#">Services</a><br>
                     <a href="#">Store Finder</a><br>
-                    <a href="../gallery/gal.html">Gallery</a><br><br>
+                    <a href="../gallery/">Gallery</a><br><br>
                 </div>
                 <div class="footerDetails">
                     <h3>ADDRESS</h3><br>
