--- a/services/index.html
+++ b/services/index.html
@@ -29,13 +29,13 @@
     </div>
     <div id="mySidepanel" class="sidepanel">
         <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-        <a href="../index.html">Home</a>
-        <a href="../product/index.html">Products</a>
-        <a href="../recipe/index.html">Recipes</a>
-        <a href="../contact/contact.html">Contact Us</a>
-        <a href="../services/index.htm">Services</a>
+        <a href="../">Home</a>
+        <a href="../product/">Products</a>
+        <a href="../recipe/">Recipes</a>
+        <a href="../contact/">Contact Us</a>
+        <a href="../services/">Services</a>
         <a href="#">Store Finder</a>
-        <a href="../gallery/gal.html">Gallery</a>
+        <a href="../gallery/">Gallery</a>
 
     </div>
     
