--- a/services/index.html
+++ b/services/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="topnav">
         <div href="#">
-            <a href="../index.html">
+            <a href="../">
                 <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
             </a>
             <button class="openbtn" onclick="openNav()">☰</button>
