--- a/contact/index.html
+++ b/contact/index.html
@@ -31,7 +31,7 @@
         <a href="../product/">Products</a>
         <a href="../recipe/">Recipes</a>
         <a href="../contact/">Contact Us</a>
-        <a href="#">Services</a>
+        <a href="../services/">Services</a>
         <a href="#">Store Finder</a>
         <a href="../gallery/">Gallery</a>
 
@@ -66,7 +66,7 @@
                     <a href="../product/">Products</a><br>
                     <a href="../recipe/">Recipes</a><br>
                     <a href="../contact/">Contact Us</a><br>
-                    <a href="#">Services</a><br>
+                    <a href="../services/">Services</a><br>
                     <a href="#">Store Finder</a><br>
                     <a href="../gallery/">Gallery</a><br><br>
                 </div>
