--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="product/">Products</a>
             <a href="recipe/">Recipes</a>
             <a href="contact/">Contact Us</a>
-            <a href="services/>Services</a>
+            <a href="services/"">Services</a>
             <a href="#">Store Finder</a>
             <a href="gallery/">Gallery</a>
 
@@ -94,12 +94,12 @@
                 <div class="footerLinks">
                     <h3>LINKS</h3><br>
                     <a href="#">Home</a><br>
-                    <a href="product/index.html">Products</a><br>
-                    <a href="recipe/index.html">Recipes</a><br>
-                    <a href="contact/contact.html">Contact Us</a><br>
-                    <a href="#">Services</a><br>
+                    <a href="product/">Products</a><br>
+                    <a href="recipe/">Recipes</a><br>
+                    <a href="contact/">Contact Us</a><br>
+                    <a href="services/">Services</a><br>
                     <a href="#">Store Finder</a><br>
-                    <a href="gallery/gal.html">Gallery</a><br><br>
+                    <a href="gallery/">Gallery</a><br><br>
                 </div>
                 <div class="footerDetails">
                     <h3>ADDRESS</h3><br>
