Added FAB to all the pages

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -14,21 +14,20 @@
 
 <body>
 
-    <div class="container">
-        <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
-            <p> Contact Us</p>
-        </div>
-        <div class="topnav">
-            <div>
-                <a href="#">
-                    <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
-                </a>
-                <button class="openbtn" onclick="openNav()">☰</button>
-
-            </div>
-
-        </div>
-    </div>
+        <div class="container">
+                <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
+                    <a> Contact Us</a>
+                </div>
+                <div class="topnav">
+                    <div>
+                        <a href="#">
+                            <img src="static/assets/logo.png" alt="Frescamer" class="logo">
+                        </a>
+                        <button class="openbtn" onclick="openNav()">☰</button>
+        
+                    </div>
+        
+                </div>
     <div id="mySidepanel" class="sidepanel">
         <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
         <a href="../">Home</a>
