--- a/contact/index.html
+++ b/contact/index.html
@@ -17,14 +17,20 @@
 </head>
 
 <body>
-    <div class="topnav">
-        <div href="#">
-            <a href="../">
-                <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
-            </a>
-            <button class="openbtn" onclick="openNav()">☰</button>
-        </div>
-    </div>
+        <div class="container">
+                <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
+                    <a> Contact Us</a>
+                </div>
+                <div class="topnav">
+                    <div>
+                        <a href="#">
+                            <img src="static/assets/logo.png" alt="Frescamer" class="logo">
+                        </a>
+                        <button class="openbtn" onclick="openNav()">☰</button>
+        
+                    </div>
+        
+                </div>
     <div id="mySidepanel" class="sidepanel">
         <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
         <a href="../">Home</a>
