--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="container">
         <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
-            <a> Contact Us</a>
+            <a href="../contact/">Contact Us</a>
         </div>
         <div class="topnav">
             <div>
