--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
 <body>
         <div class="container">
                 <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
-                    <a> Contact Us</a>
+                    <a href="../contact/">Contact Us</a>
                 </div>
                 <div class="topnav">
                     <div>
