--- a/recipe/index.html
+++ b/recipe/index.html
@@ -16,7 +16,7 @@
 
         <div class="container">
                 <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
-                    <a> Contact Us</a>
+                    <a href="../contact/">Contact Us</a>
                 </div>
                 <div class="topnav">
                     <div>
