--- a/contact/index.html
+++ b/contact/index.html
@@ -24,7 +24,7 @@
                 <div class="topnav">
                     <div>
                         <a href="#">
-                            <img src="static/assets/logo.png" alt="Frescamer" class="logo">
+                            <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
                         </a>
                         <button class="openbtn" onclick="openNav()">☰</button>
         
