--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="container">
         <div class="fab"><i class="fa fa-phone" aria-hidden="true"></i>
-            <a href="../contact/">Contact Us</a>
+            <a href="./contact/">Contact Us</a>
         </div>
         <div class="topnav">
             <div>
@@ -63,7 +63,7 @@
             <a href="product/">Products</a>
             <a href="recipe/">Recipes</a>
             <a href="contact/">Contact Us</a>
-            <a href="services/"">Services</a>
+            <a href="services/">Services</a>
             <a href="#">Store Finder</a>
             <a href="gallery/">Gallery</a>
 
